Revert "try setting position: sticky to fix popup jumping on mobile"
This reverts commit 910384f6edd8b65189a7a45694bc6168ca5c2c70.

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,7 +1,7 @@
 .popup {
   display: flex;
 
-  position: sticky;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -24,7 +24,7 @@
 .popup::before {
   content: '';
   
-  position: sticky;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
